# inirs_hw

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  api_test.py  app.py  conftest.py  generate_data.py  requirements.txt  util.py
app/templates/: order_rows.html  orders.html  products.html
